--- a/.gitignore
+++ b/.gitignore
@@ -84,9 +84,8 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-logs/
+**/logs
 *.log
 *.gz
-resources/
-resources/*
-resources/**
+**/resources
+
