--- a/.gitignore
+++ b/.gitignore
@@ -86,8 +86,10 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-logs/
+logs
 *.log
 *.gz
 resources/
 
+/mvnw
+/mvnw.cmd
