--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=update
+spring.jpa.hibernate.ddl-auto=create
 logging.file.name=${logging.file.path}/app.log
 logging.file.path=logs
 temp.path=D:/project/zoom/resources/temp
