--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 logging.file.name=${logging.file.path}/app.log
 logging.file.path=logs
-temp.path=D:/project/zoom/resources/temp
-out.path=D:/project/zoom/resources/temp/out
+temp.path=C:/temp
+out.path=C:/temp
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=500MB
