--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ resources/temp
 .mvn/wrapper
 target/
 zoom.rar
+!/src/main/resources/static/css/
+!/src/main/resources/templates/clients/
+!/src/main/resources/templates/include/
