--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/zoomos_data
 spring.datasource.username=postgres
 spring.datasource.password=root
@@ -10,6 +10,6 @@ logging.file.name=${logging.file.path}/app.log
 logging.file.path=logs
 temp.path=C:/temp
 out.path=C:/temp
-spring.servlet.multipart.max-file-size=500MB
-spring.servlet.multipart.max-request-size=500MB
+spring.servlet.multipart.max-file-size=600MB
+spring.servlet.multipart.max-request-size=600MB
 spring.mvc.favicon.enabled=false
