--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.h2.console.enabled=false
+spring.h2.console.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/zoomos_data
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 logging.file.name=${logging.file.path}/app.log
