--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/zoomos_data
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 logging.file.name=${logging.file.path}/app.log
 logging.file.path=logs
 temp.path=C:/temp
 out.path=C:/temp
-spring.servlet.multipart.max-file-size=600MB
-spring.servlet.multipart.max-request-size=600MB
+spring.servlet.multipart.max-file-size=1000MB
+spring.servlet.multipart.max-request-size=1000MB
 spring.mvc.favicon.enabled=false
