--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ temp.path=C:/temp
 out.path=C:/temp
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
+management.endpoints.web.exposure.include=scheduledtasks
